basic/09-ingress-traefik/manifests/echo-path-ingress.yaml
# Bonus: path-based routing to a second app on the SAME host.
# Deploy a second app named "echo" (copy deployment.yaml/service.yaml, rename to "echo"),
# then add a second path here.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  ingressClassName: public
  rules:
    - host: whoami.microk8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
          - path: # TODO: e.g. /echo
            pathType: Prefix
            backend:
              service:
                name: # TODO: name of your second Service, e.g. echo
                port:
                  number: 80
